[package]
name = "advent_of_code"
version = "0.10.0"
authors = ["Felix Spöttel <1682504+fspoettel@users.noreply.github.com>"]
edition = "2021"
default-run = "advent_of_code"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
doctest = false

[profile.dhat]
inherits = "release"
debug = 1

[features]
dhat-heap = ["dhat"]
today = ["chrono"]
test_lib = []

[dependencies]
# Template dependencies
chrono = { version = "0.4.31", optional = true }
dhat = { version = "0.3.2", optional = true }
pico-args = "0.5.0"
tinyjson = "2.5.1"
# Solution dependencies
enum-ordinalize = "4.2.1"
itertools = "0.12.0"
rayon = "1.8.0"
num-integer = "0.1"
thiserror = "1.0.50"
either = "1.9.0"
tinyvec = { version = "1.6.0", features = ["alloc"] }
fxhash = "0.2.1"
rand = "0.8.5"
